@@ -67,6 +67,8 @@ Bugfixes:
   offloading flags are used.
 - Ensure that usage of the HIP API from within Score-P does not leave
   lingering last error values.
+- Fix memory corruption in cases where the HIP communicator was not
+  initialized before unification.
 
 ------------------- Released version 8.4 -----------------------------
 
